Fix settings dropdown menu background on mobile

--- a/css/red-night.css
+++ b/css/red-night.css
@@ -458,12 +458,17 @@ th i a.disabled {
     color: var(--red);
 }
 
+.navbar .btn-navbar,
 #navbar .navbar-inner .btn-navbar {
     background-color: var(--grey2);
     background-image: none;
     color: var(--white);
     border: none;
     box-shadow: none;
+}
+
+.navbar .btn-navbar:active, .navbar .btn-navbar:hover {
+    background-color: var(--grey4);
 }
 
 #navbar_login i {
